# seatshell

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/seatshell-admin-daemon/: Cargo.toml
crates/seatshell-admin-daemon/src/: main.rs
crates/seatshell-common/: Cargo.toml
crates/seatshell-common/src/: config.rs  lib.rs  session.rs
crates/seatshell-config/: Cargo.toml
crates/seatshell-config/src/: lib.rs
crates/seatshell-notifications/: Cargo.toml
crates/seatshell-notifications/src/: lib.rs
crates/seatshell-protocol/: Cargo.toml
crates/seatshell-protocol/src/: lib.rs
crates/seatshell-session/: Cargo.toml
crates/seatshell-session/src/: main.rs
crates/seatshell-shell/: Cargo.toml  build.rs
crates/seatshell-shell/src/: apps.rs  main.rs
crates/seatshell-shell/src/ui/: app-row.slint  app-window.slint  command-surface.slint  desktop.slint  launcher.slint  notification-center.slint  overview.slint  panel.slint  shell-theme.slint  shell-widgets.slint  user-card.slint
crates/seatshell-user-agent/: Cargo.toml
crates/seatshell-user-agent/src/: main.rs
docs/: DESIGN.md  PoC.md  SECURITY.md  TESTING.md
resources/applications/: org.seatshell.Browser.desktop  org.seatshell.Files.desktop  org.seatshell.Terminal.desktop
resources/labwc/: autostart  environment  menu.xml  rc.xml
resources/sessions/: seatshell.desktop
scripts/: install-seatshell.sh  run-seatshell.sh  smoke-dbus.sh  smoke-labwc.sh  validate-display-manager-session.sh  validate-seathell-install.sh
