[package]
name = "seatshell-user-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
seatshell-common.workspace = true
seatshell-protocol.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
